--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
   "author": "Héctor Loyo <hector.loyo@hotmail.com>",
   "license": "MIT",
   "bin": {
-    "random-msg": "./bin/global.js"
+    "random-msg": "bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/polterskn/testfor-random-messages.git"
+  },
+  "bugs": {
+    "url": "https://github.com/polterskn/testfor-random-messages/issues"
+  },
+  "homepage": "https://github.com/polterskn/testfor-random-messages#readme"
 }
